--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
     <mailingLists/>
 
     <prerequisites>
-        <maven>2.1</maven>
+        <maven>2.2</maven>
     </prerequisites>
 
     <modules/>
@@ -91,17 +91,26 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <project.myrepoconf>${project.basedir}/src/main/config</project.myrepoconf>
+
+        <!-- Walkaround for Maven3&PMD-plugin bug -->
+        <targetJdk>${maven.compiler.source}</targetJdk>
+
+        <!-- Walkaround for Maven3&checkstyle bug -->
+        <checkstyle.config.location>${project.myrepoconf}/checks.xml</checkstyle.config.location>
+
     </properties>
 
     <dependencyManagement/>
 
     <dependencies>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>[4,)</version>
+            <version>[4.8.2,)</version>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 
     <repositories/>
@@ -115,6 +124,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-clean-plugin</artifactId>
+                <version>2.4.1</version>
                 <configuration>
                     <filesets>
                         <fileset>
@@ -132,6 +142,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
                 <configuration>
                     <source>1.5</source>  <!-- for NetBeans IDE -->
                     <target>1.5</target>
@@ -146,6 +157,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
+                <version>2.3.1</version>
                 <configuration>
                     <archive>
                         <manifestEntries>
@@ -158,6 +170,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.2.1</version>
                 <configuration>
                     <descriptors>
                         <descriptor>src/main/assembly/descriptor.xml</descriptor>
@@ -168,16 +181,40 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
+                <version>1.0</version>
                 <configuration>
                     <rules>
                         <requireMavenVersion>
-                            <version>[2.1,3)</version>
+                            <version>[2.2,3)</version>
                         </requireMavenVersion>
                         <requireJavaVersion>
                             <version>[1.5,)</version>
                         </requireJavaVersion>
                     </rules>
                 </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>2.1.2</version>
+                <configuration>
+                    <includePom>true</includePom>
+                    <archive>
+                        <manifestEntries>
+                            <Built-By>${project.organization.name}</Built-By>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <phase>verify</phase>
+                        <goals>
+                          <goal>jar-no-fork</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
 
         </plugins>
@@ -195,9 +232,17 @@
             <resource>
                 <directory>src/main/resources</directory>
                 <includes>
+                    <include>**/*.css</include>
+                    <include>**/*.html</include>
+                    <include>**/*.png</include>
+                    <include>**/*.properties</include>
+                    <include>**/*.txt</include>
                     <include>**/*.xml</include>
                     <include>**/*.xsd</include>
                 </includes>
+                <excludes>
+                    <exclude>**/version.properties</exclude>
+                </excludes>
             </resource>
 
         </resources>
@@ -205,7 +250,19 @@
     </build>
 
     <reporting>
+
         <plugins>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <locales>ja</locales>
+                    <inputEncoding>${project.build.sourceEncoding}</inputEncoding>
+                    <outputEncoding>${project.reporting.outputEncoding}</outputEncoding>
+                </configuration>
+            </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -217,21 +274,12 @@
             </plugin>
 
             <plugin>
-                <artifactId>maven-site-plugin</artifactId>
-                <version>2.1.1</version>
-                <configuration>
-                    <locales>ja</locales>
-                    <inputEncoding>${project.build.sourceEncoding}</inputEncoding>
-                    <outputEncoding>${project.reporting.outputEncoding}</outputEncoding>
-                </configuration>
-            </plugin>
-
-            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>2.5</version>
+                <version>2.6</version>
                 <configuration>
-                    <configLocation>${project.myrepoconf}/checks.xml</configLocation>
+                    <configLocation>${checkstyle.config.location}</configLocation>
+                    <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
 
@@ -251,7 +299,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>findbugs-maven-plugin</artifactId>
-                <version>2.3.1</version>
+                <version>2.3.2</version>
                 <configuration>
                     <effort>Max</effort>
                     <threshold>Low</threshold>
@@ -280,6 +328,7 @@
             </plugin>
 
         </plugins>
+
     </reporting>
 
     <profiles/>
