--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <!--
-    Maven2(or3) POM definition file
+    Maven3 POM definition file
 -->
 
 <project
@@ -26,18 +26,18 @@
 -->Javaパッケージです。<!--
  --></description>
 
-    <url>http://sourceforge.jp/projects/jindolf/devel/</url>
+    <url>https://osdn.jp/projects/jindolf/devel/</url>
     <inceptionYear>2009</inceptionYear>
 
     <organization>
         <name>Jindolf Partners</name>
-        <url>http://sourceforge.jp/projects/jindolf/devel/</url>
+        <url>https://osdn.jp/projects/jindolf/devel/</url>
     </organization>
 
     <licenses>
         <license>
             <name>The MIT License</name>
-            <url>http://www.opensource.org/licenses/mit-license.php</url>
+            <url>https://opensource.org/licenses/mit-license.php</url>
             <distribution>manual</distribution>
         </license>
     </licenses>
@@ -45,9 +45,9 @@
     <developers>
         <developer>
             <id>olyutorskii</id>
-            <url>http://sites.google.com/site/olyutorskiipit/</url>
+            <url>https://sites.google.com/site/olyutorskiipit/</url>
             <organization>Jindolf Partners</organization>
-            <organizationUrl>http://sourceforge.jp/projects/jindolf/devel/</organizationUrl>
+            <organizationUrl>https://osdn.jp/projects/jindolf/devel/</organizationUrl>
             <roles>
                 <role>Project Founder</role>
                 <role>Java Developer</role>
@@ -59,20 +59,20 @@
     <mailingLists/>
 
     <prerequisites>
-        <maven>2.2</maven>
+        <maven>3.3</maven>
     </prerequisites>
 
     <modules/>
 
     <scm>
-        <connection>scm:hg:http://hg.sourceforge.jp/view/jindolf/JinCore</connection>
-        <developerConnection>scm:hg:ssh://hg.sourceforge.jp//hgroot/jindolf/JinCore</developerConnection>
-        <url>http://hg.sourceforge.jp/view/jindolf/JinCore/</url>
+        <connection>scm:hg:http://hg.osdn.jp/view/jindolf/JinCore</connection>
+        <developerConnection>scm:hg:ssh://hg.osdn.jp//hgroot/jindolf/JinCore</developerConnection>
+        <url>https://osdn.jp/projects/jindolf/scm/hg/JinCore/</url>
     </scm>
 
     <issueManagement>
-        <system>SourceForge.JP</system>
-        <url>http://sourceforge.jp/projects/jindolf/ticket/</url>
+        <system>OSDN.JP</system>
+        <url>https://osdn.jp/projects/jindolf/ticket/</url>
     </issueManagement>
 
     <ciManagement/>
@@ -81,8 +81,8 @@
     <properties>
         <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
 
-        <maven.compiler.source>1.5</maven.compiler.source>
-        <maven.compiler.target>1.5</maven.compiler.target>
+        <maven.compiler.source>1.7</maven.compiler.source>
+        <maven.compiler.target>1.7</maven.compiler.target>
 
         <maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
         <maven.compiler.showWarnings>true</maven.compiler.showWarnings>
@@ -104,7 +104,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.10</version>
+            <version>4.12</version>
             <scope>test</scope>
         </dependency>
 
@@ -121,14 +121,14 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
-                <version>1.1</version>
+                <version>1.4.1</version>
                 <configuration>
                     <rules>
                         <requireMavenVersion>
-                            <version>[2.2,)</version>
+                            <version>[3.3,)</version>
                         </requireMavenVersion>
                         <requireJavaVersion>
-                            <version>[1.5,)</version>
+                            <version>[1.7,)</version>
                         </requireJavaVersion>
                     </rules>
                 </configuration>
@@ -136,8 +136,14 @@
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-install-plugin</artifactId>
+                <version>2.5.2</version>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-clean-plugin</artifactId>
-                <version>2.5</version>
+                <version>3.0.0</version>
                 <configuration>
                     <filesets>
                         <fileset>
@@ -159,10 +165,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.5.1</version>
+                <version>3.5.1</version>
                 <configuration>
-                    <source>1.5</source>  <!-- for NetBeans IDE -->
-                    <target>1.5</target>
+                    <source>1.7</source>  <!-- for NetBeans IDE -->
+                    <target>1.7</target>
                     <showDeprecation>true</showDeprecation>
                     <showWarnings>true</showWarnings>
                     <compilerArguments>
@@ -174,7 +180,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>2.4</version>
+                <version>3.0.0</version>
                 <configuration>
                     <archive>
                         <manifestEntries>
@@ -187,8 +193,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.3</version>
+                <version>2.6</version>
                 <configuration>
+                    <archiveBaseDirectory>.</archiveBaseDirectory>
                     <descriptors>
                         <descriptor>src/main/assembly/descriptor.xml</descriptor>
                     </descriptors>
@@ -198,7 +205,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>2.1.2</version>
+                <version>3.0.0</version>
                 <configuration>
                     <includePom>true</includePom>
                     <archive>
@@ -221,13 +228,13 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
-                <version>2.5</version>
+                <version>3.0.0</version>
             </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.12</version>
+                <version>2.19.1</version>
                 <configuration>
                     <skipTests>false</skipTests>
                     <enableAssertions>true</enableAssertions>
@@ -237,7 +244,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
-                <version>3.1</version>
+                <version>3.5.1</version>
                 <configuration>
                     <generateReports>true</generateReports>
                     <locales>ja</locales>
@@ -249,14 +256,14 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>2.9.1</version>
+                <version>2.15</version>
                 <!-- config from property value -->
             </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-pmd-plugin</artifactId>
-                <version>2.7.1</version>
+                <version>3.6</version>
                 <configuration>
                     <targetJdk>${maven.compiler.target}</targetJdk>
                     <rulesets>
@@ -268,10 +275,27 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>findbugs-maven-plugin</artifactId>
-                <version>2.3.3</version> <!-- 2.4.0 has BUG-->
+                <version>3.0.3</version>
                 <configuration>
                     <effort>Max</effort>
                     <threshold>Low</threshold>
+                    <!-- for Jenkins -->
+                    <findbugsXmlOutput>true</findbugsXmlOutput>
+                    <findbugsXmlWithMessages>true</findbugsXmlWithMessages>
+                    <xmlOutput>true</xmlOutput>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+                <version>2.7</version>
+                <configuration>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                    <formats>
+                        <format>html</format>
+                        <format>xml</format> <!-- for Jenkins -->
+                    </formats>
                 </configuration>
             </plugin>
 
@@ -331,7 +355,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-project-info-reports-plugin</artifactId>
-                <version>2.4</version>
+                <version>2.9</version>
                 <configuration>
                     <linkOnly>true</linkOnly>
                     <offline>true</offline>
@@ -348,6 +372,7 @@
                             <report>project-team</report>
 <!--
                             <report>dependency-convergence</report>
+                            <report>dependency-info</report>
                             <report>dependency-management</report>
                             <report>distribution-management</report>
                             <report>issue-tracking</report>
@@ -363,7 +388,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.8.1</version>
+                <version>2.10.3</version>
                 <configuration>
                     <skip>false</skip>
                     <notimestamp>true</notimestamp>
@@ -382,7 +407,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jxr-plugin</artifactId>
-                <version>2.3</version>
+                <version>2.5</version>
                 <configuration>
                     <skip>false</skip>
                 </configuration>
@@ -391,7 +416,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
-                <version>2.12</version>
+                <version>2.19.1</version>
                 <configuration>
                     <showSuccess>false</showSuccess>
                 </configuration>
@@ -407,16 +432,20 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
-                <version>2.5.1</version>
+                <version>2.7</version>
                 <configuration>
                     <encoding>${project.build.sourceEncoding}</encoding>
+                    <formats>
+                        <format>html</format>
+                        <format>xml</format> <!-- for Jenkins -->
+                    </formats>
                 </configuration>
             </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>2.9.1</version>
+                <version>2.15</version>
                 <configuration>
                     <skip>false</skip>
                     <!-- config from property value -->
@@ -433,7 +462,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-pmd-plugin</artifactId>
-                <version>2.7.1</version>
+                <version>3.6</version>
                 <configuration>
                     <skip>false</skip>
                     <targetJdk>${maven.compiler.target}</targetJdk>
@@ -454,11 +483,15 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>findbugs-maven-plugin</artifactId>
-                <version>2.3.3</version> <!-- 2.4.0 has BUG-->
+                <version>3.0.3</version>
                 <configuration>
                     <skip>false</skip>
                     <effort>Max</effort>
                     <threshold>Low</threshold>
+                    <!-- for Jenkins -->
+                    <findbugsXmlOutput>true</findbugsXmlOutput>
+                    <findbugsXmlWithMessages>true</findbugsXmlWithMessages>
+                    <xmlOutput>true</xmlOutput>
                     <!-- excludeFilterFile/ -->
                 </configuration>
             </plugin>
@@ -466,13 +499,13 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>javancss-maven-plugin</artifactId>
-                <version>2.0</version>
+                <version>2.1</version>
             </plugin>
 
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>jdepend-maven-plugin</artifactId>
-                <version>2.0-beta-2</version>
+                <version>2.0</version>
             </plugin>
 
         </plugins>
