modify issue management URL

--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
 
     <issueManagement>
         <system>OSDN.JP</system>
-        <url>https://osdn.net/projects/jindolf/ticket/</url>
+        <url>https://ja.osdn.net/projects/jindolf/ticket/</url>
     </issueManagement>
 
     <ciManagement/>
