--- a/pom.xml
+++ b/pom.xml
@@ -58,20 +58,18 @@
     <contributors/>
     <mailingLists/>
 
-    <prerequisites>
-        <maven>3.0.1</maven>
-    </prerequisites>
+    <!-- prerequisites/ -->
 
     <modules/>
 
     <scm>
-        <connection>scm:hg:http://hg.osdn.net/view/jindolf/JinCore</connection>
-        <developerConnection>scm:hg:ssh://hg.osdn.net//hgroot/jindolf/JinCore</developerConnection>
-        <url>https://osdn.net/projects/jindolf/scm/hg/JinCore/</url>
+        <connection>scm:git:git://git.osdn.net/gitroot/jindolf/JinCore.git</connection>
+        <developerConnection>scm:git:https://scm.osdn.net/gitroot/jindolf/JinCore.git</developerConnection>
+        <url>https://osdn.net/projects/jindolf/scm/git/JinCore/</url>
     </scm>
 
     <issueManagement>
-        <system>OSDN.NET</system>
+        <system>OSDN.net</system>
         <url>https://ja.osdn.net/projects/jindolf/ticket/</url>
     </issueManagement>
 
@@ -79,8 +77,8 @@
     <distributionManagement/>
 
     <properties>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
 
         <maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
         <maven.compiler.showWarnings>true</maven.compiler.showWarnings>
@@ -186,17 +184,25 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
-                <version>1.4.1</version>
-                <configuration>
-                    <rules>
-                        <requireMavenVersion>
-                            <version>[3.0.1,)</version>
-                        </requireMavenVersion>
-                        <requireJavaVersion>
-                            <version>[1.7,)</version>
-                        </requireJavaVersion>
-                    </rules>
-                </configuration>
+                <version>3.0.0-M2</version>
+                <executions>
+                    <execution>
+                        <id>enforce-versions</id>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <requireMavenVersion>
+                                    <version>[3.3.9,)</version>
+                                </requireMavenVersion>
+                                <requireJavaVersion>
+                                    <version>[1.8,)</version>
+                                </requireJavaVersion>
+                            </rules>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
 
             <plugin>
@@ -210,8 +216,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.6.1</version>
                 <configuration>
-                    <source>1.7</source>  <!-- for NetBeans IDE -->
-                    <target>1.7</target>
+                    <source>1.8</source>  <!-- for NetBeans IDE -->
+                    <target>1.8</target>
                     <compilerArguments>
                         <Xlint/>
                     </compilerArguments>
