--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,7 @@
         <locale>en</locale>
         <site.locales>${locale}</site.locales>
         <javadoc.locale>${locale}</javadoc.locale>
-        <findbugs.jvmArgs>-Duser.language=en</findbugs.jvmArgs>
+        <spotbugs.jvmArgs>-Duser.language=${locale}</spotbugs.jvmArgs>
 
         <!-- Walk around: JDK 11 javadoc + Maven -->
         <detectJavaApiLink>false</detectJavaApiLink>
@@ -106,11 +106,11 @@
 
         <pmd-plugin.version>3.7</pmd-plugin.version>
 
-        <findbugs-plugin.version>3.0.4</findbugs-plugin.version>
-        <findbugs.effort>Max</findbugs.effort>
-        <findbugs.threshold>Low</findbugs.threshold>
+        <spotbugs-plugin.version>3.1.11</spotbugs-plugin.version>
+        <spotbugs.effort>Max</spotbugs.effort>
+        <spotbugs.threshold>Low</spotbugs.threshold>
         <!-- for Jenkins -->
-        <findbugs.xmlOutput>true</findbugs.xmlOutput>
+        <spotbugs.xmlOutput>true</spotbugs.xmlOutput>
 
     </properties>
 
@@ -366,6 +366,12 @@
                 <version>${checkstyle-plugin.version}</version>
             </plugin>
 
+            <plugin>
+                <groupId>com.github.spotbugs</groupId>
+                <artifactId>spotbugs-maven-plugin</artifactId>
+                <version>${spotbugs-plugin.version}</version>
+            </plugin>
+
         </plugins>
 
         <resources>
@@ -535,9 +541,9 @@
             </plugin>
 
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>findbugs-maven-plugin</artifactId>
-                <version>${findbugs-plugin.version}</version>
+                <groupId>com.github.spotbugs</groupId>
+                <artifactId>spotbugs-maven-plugin</artifactId>
+                <version>${spotbugs-plugin.version}</version>
             </plugin>
 
         </plugins>
